@@ -15,7 +15,7 @@ public interface UserMapper {
         @Mapping(target = "role", source = "role")
     @Mapping(target = "shop", source = "store")
         @Mapping(target = "email", source = "email")
-        @Mapping(target = "username", source = "username")
+
         @Mapping(target = "firstName", source = "userProfile.firstName")
         @Mapping(target = "lastName", source = "userProfile.lastName")
         @Mapping(target = "phone", source = "userProfile.phone")
@@ -24,6 +24,7 @@ public interface UserMapper {
         @Mapping(target = "addressLine2", expression = "java(getDefaultAddressLine2(user))")
         @Mapping(target = "city", expression = "java(getDefaultCity(user))")
         @Mapping(target = "district", expression = "java(getDefaultDistrict(user))")
+        @Mapping(target = "taluk", expression = "java(getDefaultTaluk(user))")
         @Mapping(target = "state", expression = "java(getDefaultState(user))")
         @Mapping(target = "country", expression = "java(getDefaultCountry(user))")
         @Mapping(target = "pincode", expression = "java(getDefaultPincode(user))")
@@ -36,49 +37,56 @@ public interface UserMapper {
     default String getDefaultAddressLine1(User user) {
             return (user.getUserProfile() != null && user.getUserProfile().getAddresses() != null
                             && !user.getUserProfile().getAddresses().isEmpty())
-                                            ? user.getUserProfile().getAddresses().get(0).getAddressLine1()
+                                            ? user.getUserProfile().getAddresses().getFirst().getAddressLine1()
                                             : null;
     }
 
     default String getDefaultCity(User user) {
             return (user.getUserProfile() != null && user.getUserProfile().getAddresses() != null
                             && !user.getUserProfile().getAddresses().isEmpty())
-                                            ? user.getUserProfile().getAddresses().get(0).getCity()
+                                            ? user.getUserProfile().getAddresses().getFirst().getCity()
                                             : null;
     }
 
     default String getDefaultAddressLine2(User user) {
             return (user.getUserProfile() != null && user.getUserProfile().getAddresses() != null
                             && !user.getUserProfile().getAddresses().isEmpty())
-                                            ? user.getUserProfile().getAddresses().get(0).getAddressLine2()
+                                            ? user.getUserProfile().getAddresses().getFirst().getAddressLine2()
                                             : null;
     }
 
     default String getDefaultDistrict(User user) {
             return (user.getUserProfile() != null && user.getUserProfile().getAddresses() != null
                             && !user.getUserProfile().getAddresses().isEmpty())
-                                            ? user.getUserProfile().getAddresses().get(0).getDistrict()
+                                            ? user.getUserProfile().getAddresses().getFirst().getDistrict()
+                                            : null;
+    }
+
+    default String getDefaultTaluk(User user) {
+            return (user.getUserProfile() != null && user.getUserProfile().getAddresses() != null
+                            && !user.getUserProfile().getAddresses().isEmpty())
+                                            ? user.getUserProfile().getAddresses().getFirst().getTaluk()
                                             : null;
     }
 
     default String getDefaultState(User user) {
             return (user.getUserProfile() != null && user.getUserProfile().getAddresses() != null
                             && !user.getUserProfile().getAddresses().isEmpty())
-                                            ? user.getUserProfile().getAddresses().get(0).getState()
+                                            ? user.getUserProfile().getAddresses().getFirst().getState()
                                             : null;
     }
 
     default String getDefaultCountry(User user) {
             return (user.getUserProfile() != null && user.getUserProfile().getAddresses() != null
                             && !user.getUserProfile().getAddresses().isEmpty())
-                                            ? user.getUserProfile().getAddresses().get(0).getCountry()
+                                            ? user.getUserProfile().getAddresses().getFirst().getCountry()
                                             : null;
     }
 
     default String getDefaultPincode(User user) {
             return (user.getUserProfile() != null && user.getUserProfile().getAddresses() != null
                             && !user.getUserProfile().getAddresses().isEmpty())
-                                            ? user.getUserProfile().getAddresses().get(0).getPincode()
+                                            ? user.getUserProfile().getAddresses().getFirst().getPincode()
                                             : null;
     }
 
